# II142X_VT2025

./: .gitignore  DL Test.ipynb  README.md  SVD.ipynb  SVD_KNN_Binary.ipynb  basket_features.csv  data_analysis.ipynb  deep_learning.ipynb  fin_features_recommendation.ipynb  fin_param_test.ipynb  invest_data_analysis.ipynb  pyproject.toml  setup.py  stock_finparameter_recommendation.ipynb  stock_recommendation copy.ipynb  stock_recommendation.ipynb
final/: Content-based filtering.ipynb  DL binary label.ipynb  Data preparation.ipynb  Hybrid_RecommendationSystem.ipynb  KNN + SVD binary label.ipynb  X_test.csv  X_train.csv  basket_numerical_features.csv  best_basket_binary_model.pth  best_model.pt  best_recommendation_model.pth  recommendation_model.pth  simple_torch_recommendation_model.pt  y_test.csv  y_train.csv
other/: SVD.ipynb  SVD_KNN_Binary.ipynb  data_analysis.ipynb  deep_learning.ipynb  fin_features_recommendation.ipynb  machine_learning.ipynb  stock_finparameter_recommendation.ipynb
syntheticDataGenerators/investment/: invest_data.csv  invest_data_analysis.ipynb  invest_data_gemini-2.5-flash.csv  investmentByAge.py  llm_purchase_generator_test.py  purchase_generator.py
syntheticDataGenerators/user/: swedish_users.csv  userDataGenerator.py  user_data_analysis.ipynb
