[project]
name = "thesisproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Lellalu",email = "lella.lu14@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
